--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,14 @@ edition = "2021"
 logos = "0.14.3"
 nalgebra = "0.33.2"
 rayon = "1.10.0"
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "day06"
+harness = false
+
+[[bench]]
+name = "day07"
+harness = false
